<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="morphparts_title">MorphParts</string>
    <string name="morphparts_summary">Setting up Morph Kernel HERE</string>
    <string name="audio_category">Audio</string>
    <string name="display_category">Display</string>
    <string name="torch_category">Torch</string>
    <string name="vibration_category">Vibration</string>
    <string name="headphone_gain">Headphone gain</string>
    <string name="microphone_gain">Microphone gain</string>
    <string name="highperfaudio_title">Ultra High Quality Audio</string>
    <string name="highperfaudio_summary">Enable to get bettter Audio Experience</string>
    <string name="earpiece_gain">Earpiece gain (Calls)</string>
    <string name="speaker_gain">Speaker gain</string>
    <string name="Boost_title">Boost</string>
    <string name="touchboost_title">Enable Touchboost</string>
    <string name="touchboost_summary">Boost cpu when touch detected for soomth experience</string>
    <string name="gpuboost_title">GPU Boost</string>
    <string name="gpuboost_summary">Boost your GPU without compromising power efficiency</string>
    <string name="gpuboost_dialogTitle">Select your GPU boost level</string>
    <string name="gpuboost_high">High</string>
    <string name="gpuboost_medium">Medium</string>
    <string name="gpuboost_low">Low</string>
    <string name="gpuboost_disable">Disable</string>
    <string name="tcpcongestion_title">TCP Congestion</string>
    <string name="tcpcongestion_summary">Transmission Control Protocol Congestion Algorithm</string>
    <string name="tcpcongestion_dialogTitle">Choose your TCP Congestion Algorithm</string>
    <string name="tcpcongestion_westwood">Westwood</string>
    <string name="tcpcongestion_cubic">Cubic</string>
    <string name="tcpcongestion_reno">Reno</string>
    <string name="tcpcongestion_bic">Bic</string>
    <string name="tcpcongestion_highspeed">Highspeed</string>
    <string name="tcpcongestion_htcp">HTCP</string>
    <string name="ambient_gesture_haptic_feedback">Haptic feedback</string>
    <string name="ambient_gesture_haptic_feedback_summary">Vibrate when a Ambient gesture is detected</string>
    <string name="ambient_display_enable_title">Ambient display gestures</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
    <string name="tilt_sensor_title">Tilt sensor</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="torch_yellow_brightness_title">White brightness</string>
    <string name="torch_white_brightness_title">Yellow brightness</string>
    <string name="backlight_dimmer">Backlight Dimmer</string>
    <string name="backlight_summary">Dim the display to the maximum value</string>
    <string name="fps_info_title">FPS Info</string>
    <string name="fps_info_summary">Show FPS info</string>
    <string name="cpuboost_title">CPU Boost</string>
    <string name="cpuboost_summary">Boost your CPU for better Experience</string>
    <string name="cpuboost_dialogTitle">Select your CPU Boost level</string>
    <string name="cpuboost_high">High</string>
    <string name="cpuboost_medium">Medium</string>
    <string name="cpuboost_low">Low</string>
    <string name="cpuboost_disable">Disable</string>
    <string name="vibration_system_title">System Vibration Strength</string>
    <string name="vibration_notification_title">Notification Vibration Strength</string>
    <string name="vibration_call_title">Call Vibration Strength</string>
    <string name="device_kcal_title">Display Calibration</string>
    <string name="device_kcal_summary">Display color calibration using KCAL</string>
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>
    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>
    <string name="presets_dialog_title">Select Preset</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="lkmprofile_title">Low Memory Killer</string>
    <string name="lkmprofile_summary">Low Memory Killer</string>
    <string name="lkmprofile_dialogTitle">Choose your LKM profile</string>
    <string name="lkmprofile_veryaggressive">Very Aggressive</string>
    <string name="lkmprofile_aggressive">Aggressive</string>
    <string name="lkmprofile_light">Light</string>
    <string name="lkmprofile_medium">Medium</string>
    <string name="lkmprofile_verylight">Very Light</string>
    <string name="lkmprofile_default">Default</string>
    <string name="lkmprofile_disable">Disable</string>
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_burn_in">Burn in Shit</string>
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="kcal_presets">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>
    <string name="thermal_title">Thermal</string>
    <string name="msmthermal_title">MSM Thermal</string>
    <string name="msmthermal_summary">Enable Thermal driver control</string>
    <string name="corecontrol_title">Core Control</string>
    <string name="corecontrol_summary">Limit the cores</string>
    <string name="vddrestrict_title">VDD Restriction</string>
    <string name="vddrestrict_summary">Limits CPU voltage</string>
    <string name="cpucore_title">CPU Core</string>
    <string name="cpucore_summary">Control Your CPU core</string>
    <string name="cpucore_dialogTitle">Select no. of core want to disable</string>
    <string name="cpucore_zero">0</string>
    <string name="cpucore_one">1</string>
    <string name="cpucore_two">2</string>
    <string name="cpucore_three">3</string>
    <string name="cpucore_four">4</string>
    <string name="cpucore_five">5</string>
    <string name="cpucore_six">6</string>
    <string name="usb_fastcharge_title">USB Fastcharge</string>
    <string name="fastcharge_title">Enable USB Fastcharge</string>
    <string name="fastcharge_summary">Faster charging speed</string>
    <string name="camera_title">Camera</string>
    <string name="camera_hal3_title">Enable Camera2 API</string>
    <string name="selinux_category">SELinux</string>
    <string name="selinux_explanation_summary">SELinux is a set of kernel modifications and user-space tools. Changing modes can cause unwanted effects. Use at your own risk.</string>
    <string name="selinux_mode_title">SELinux mode</string>
    <string name="selinux_permissive_summary">Permissive (for freedom)</string>
    <string name="selinux_enforcing_summary">Enforcing (for security purpose)</string>
    <string name="selinux_persistence_title">Persist across reboots</string>
    <string name="selinux_persistence_summary">Restore the above set sepolicy mode on each boot</string>
</resources>