<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_title">

        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:key="msmthermal"
            android:defaultValue="false"
            android:title="@string/msmthermal_title"
            android:icon="@drawable/ic_mtherm"
            android:summary="@string/msmthermal_summary" />

        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:key="corecontrol"
            android:defaultValue="true"
            android:title="@string/corecontrol_title"
            android:icon="@drawable/ic_ccontrol"
            android:summary="@string/corecontrol_summary" />

        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:key="vddrestrict"
            android:defaultValue="false"
            android:title="@string/vddrestrict_title"
            android:icon="@drawable/ic_vddres"
            android:summary="@string/vddrestrict_summary" />

        <com.xiaomi.morphparts.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/cpucore_dialogTitle"
            android:entries="@array/cpucore_profiles"
            android:entryValues="@array/cpucore_values"
            android:key="cpucore"
            android:summary="@string/cpucore_summary"
            android:icon="@drawable/ic_cpucore" 
            android:title="@string/cpucore_title" />

       <com.xiaomi.morphparts.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/tcpcongestion_dialogTitle"
            android:entries="@array/tcpcongestion_profiles"
            android:entryValues="@array/tcpcongestion_values"
            android:key="tcpcongestion"
            android:summary="@string/tcpcongestion_summary"
            android:icon="@drawable/ic_tcp"
            android:title="@string/tcpcongestion_title" />

        <com.xiaomi.morphparts.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/lkmprofile_dialogTitle"
            android:entries="@array/lkmprofile_profiles"
            android:entryValues="@array/lkmprofile_values"
            android:key="lkmprofile"
            android:summary="@string/lkmprofile_summary"
            android:icon="@drawable/ic_lkm" 
            android:title="@string/lkmprofile_title" />

        <com.xiaomi.morphparts.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/cpuboost_dialogTitle"
            android:entries="@array/cpuboost_profiles"
            android:entryValues="@array/cpuboost_values"
            android:key="cpuboost"
            android:summary="@string/cpuboost_summary"
            android:icon="@drawable/ic_cpuboost" 
            android:title="@string/cpuboost_title" />

        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:key="touchboost"
            android:defaultValue="true"
            android:title="@string/touchboost_title"
            android:icon="@drawable/ic_boost"
            android:summary="@string/touchboost_summary" />

        <com.xiaomi.morphparts.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/gpuboost_dialogTitle"
            android:entries="@array/gpuboost_profiles"
            android:entryValues="@array/gpuboost_values"
            android:key="gpuboost"
            android:summary="@string/gpuboost_summary"
            android:icon="@drawable/ic_gpuboost" 
            android:title="@string/gpuboost_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/audio_category">
        <com.xiaomi.morphparts.SecureSettingCustomSeekBarPreference
            android:defaultValue="2"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain"/>

        <com.xiaomi.morphparts.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain"/>

        <com.xiaomi.morphparts.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="earpiece_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_earpiece"
            android:title="@string/earpiece_gain" />

        <com.xiaomi.morphparts.SecureSettingCustomSeekBarPreference 
            android:defaultValue="0"
            android:key="speaker_gain" 
            android:max="20"
            app:min="-10" 
            android:icon="@drawable/ic_speaker"
            android:title="@string/speaker_gain" />

        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:key="highperfaudio"
            android:defaultValue="false"
            android:title="@string/highperfaudio_title"
            android:icon="@drawable/ic_haudio"
            android:summary="@string/highperfaudio_summary" />

        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="dirac_enabled"
            android:summary="@string/dirac_summary"
            android:title="@string/dirac_title"
            android:icon="@drawable/ic_dirac" />

        <com.xiaomi.morphparts.SecureSettingListPreference
            android:defaultValue="0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_headset_pref_entries"
            android:entryValues="@array/dirac_headset_pref_values"
            android:key="dirac_headset_pref"
            android:summary="%s"
            android:title="@string/dirac_headset_title"
            android:icon="@drawable/ic_headphones" />

        <com.xiaomi.morphparts.SecureSettingListPreference
            android:defaultValue="0,0,0,0,0,0,0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_preset_pref_entries"
            android:entryValues="@array/dirac_preset_pref_values"
            android:key="dirac_preset_pref"
            android:summary="%s"
            android:title="@string/dirac_preset_title"
            android:icon="@drawable/ic_preset" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/display_category">
        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:key="backlight_dimmer"
            android:icon="@drawable/ic_backlight"
            android:title="@string/backlight_dimmer"
            android:summary="@string/backlight_summary" />

        <PreferenceScreen
            android:key="ambient_display_gestures"
            android:fragment="com.xiaomi.morphparts.AmbientGesturePreferenceActivity"
            android:summary="@string/ambient_display_gestures_summary"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title" />

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/device_kcal_summary" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.xiaomi.morphparts.KcalSettingsActivity"
                android:targetPackage="com.xiaomi.morphparts"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="selinux"
        android:title="@string/selinux_category">

        <Preference
            android:key="selinux_explanation"
            android:summary="@string/selinux_explanation_summary"
            android:selectable="false"/>

        <SwitchPreference
            android:key="selinux_mode"
            android:icon="@drawable/ic_selinux"
            android:title="@string/selinux_mode_title"
            android:summaryOn="@string/selinux_enforcing_summary"
            android:summaryOff="@string/selinux_permissive_summary" />

        <SwitchPreference
            android:key="selinux_persistence"
            android:icon="@drawable/ic_selinux_persistence"
            android:title="@string/selinux_persistence_title"
            android:summary="@string/selinux_persistence_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory 
        android:key="torch"
        android:title="@string/torch_category">

        <com.xiaomi.morphparts.CustomSeekBarPreference
            android:defaultValue="100"
            android:key="yellow_torch_brightness"
            android:max="100"
            app:min="0"
            android:icon="@drawable/ic_torch"
            android:title="@string/torch_yellow_brightness_title" />

        <com.xiaomi.morphparts.CustomSeekBarPreference
            android:defaultValue="100"
            android:key="white_torch_brightness"
            android:max="100"
            app:min="0"
            android:icon="@drawable/ic_torch"
            android:title="@string/torch_white_brightness_title" />
    </PreferenceCategory>

    <PreferenceCategory 
        android:key="vtg"
        android:title="@string/vibration_category">

        <com.xiaomi.morphparts.VibrationSeekBarPreference
            android:defaultValue="13"
            android:key="vibration_system"
            android:max="100"
            android:title="@string/vibration_system_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/>

        <com.xiaomi.morphparts.VibrationSeekBarPreference
            android:defaultValue="100"
            android:key="vibration_notification"
            android:max="100"
            android:title="@string/vibration_notification_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/> 

         <com.xiaomi.morphparts.VibrationSeekBarPreference
            android:defaultValue="100"
            android:key="vibration_call"
            android:max="100"
            android:title="@string/vibration_call_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb_fastcharge"
        android:title="@string/usb_fastcharge_title" >
    <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:key="fastcharge"
            android:defaultValue="true"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_usb_fastcharge"
            android:summary="@string/fastcharge_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="camera"
        android:title="@string/camera_title">

        <com.xiaomi.morphparts.SecureSettingSwitchPreference
            android:defaultValue="true"
            android:key="hal3"
            android:icon="@drawable/ic_camera"
            android:title="@string/camera_hal3_title" />

    </PreferenceCategory>
</PreferenceScreen>
